Fix overflow issue in firefox and internet explorer

--- a/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_PP/frontend/static/frontend/styles/modules/index.scss
@@ -360,7 +360,6 @@ body.modal-open[style] {
 }
 .dynamic-part {
     min-height:100%;
-    overflow: hidden;
 }
 .sub-menu {
     box-shadow: 0px 5px 2px $shadow-color;
